# PyAPNs2

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  python
apns2/: client.py  credentials.py  errors.py  helpers.py  payload.py
test/: README.md  test_client.py  test_credentials.py  test_errors.py  test_helpers.py  test_payload.py
